# ipi

./: Cargo.toml  README.md
benches/: hash.rs
core/: Cargo.toml
core/src/: account.rs  credit.rs  lib.rs  metadata.rs  signature.rs  value.rs
core/src/value/: chrono.rs  hash.rs  mod.rs  nonce.rs  primitives.rs  string.rs  text.rs  unit_interval.rs  uuid.rs
modules/key-generator/: Cargo.toml
modules/key-generator/src/: main.rs
src/: account.rs  credit.rs  data.rs  lib.rs  metadata.rs  signature.rs  signed.rs  value.rs
src/value/: array.rs  bytes.rs  chrono.rs  hash.rs  mod.rs  nonce.rs  primitives.rs  text.rs  unit_interval.rs  uuid.rs  word.rs
std/: Cargo.toml
std/derive/: Cargo.toml
std/derive/src/: class.rs  lib.rs
std/src/: attention.rs  avusen.rs  class.rs  class_cursor.rs  class_data.rs  data.rs  lib.rs  path.rs  primitives.rs  storage.rs  ty.rs  ty_data.rs
std/src/class/: cursor.rs  metadata.rs  mod.rs  primitives.rs
std/src/object/: mod.rs  primitives.rs
std/tests/: ty_derive_simple.rs
tests/: hash.rs  metadata_signing.rs
