[package]
name = "ipi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base58 = "0.2"
bytecheck = "0.6"
chrono = "0.4"
ed25519-dalek = { git = "https://github.com/ulagbulag-village/ed25519-dalek.git", features = [
    "pkcs8",
] }
fixed = "1.15"
generic-array = "0.14"
language-tags = "0.3"
rand = "0.8"
rkyv = { version = "0.7", features = ["archive_be"] }
sha2 = "0.10"
uuid = "1.0"
