[package]
name = "ipi"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface"
documentation = "https://docs.rs/ipi"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base58 = "0.2"
bytecheck = "0.6"
chrono = "0.4"
ed25519-dalek = { git = "https://github.com/ulagbulag-village/ed25519-dalek.git", features = [
    "alloc",
    "pem",
    "pkcs8",
] }
fixed = "1.15"
generic-array = "0.14"
language-tags = "0.3"
ndarray = "0.15"
rand = "0.8"
rkyv = { version = "0.7", features = ["archive_be"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
rkyv = { version = "0.7", features = ["archive_be", "validation"] }
