[package]
name = "ipi"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface"
documentation = "https://docs.rs/ipi"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base58 = "0.2"
bytecheck = "0.6"
chrono = { version = "0.4", features = ["serde"] }
cid = "0.8"
ed25519-dalek = { git = "https://github.com/ulagbulag-village/ed25519-dalek.git", features = [
    "alloc",
    "pem",
    "pkcs8",
    "serde",
] }
fixed = { version = "1.19", features = ["serde"] }
generic-array = { version = "0.14", features = ["serde"] }
language-tags = { version = "0.3", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
ordered-float = { version = "3.3", features = ["serde"] }
quick-protobuf = "0.8"
rand = "0.8"
rkyv = { version = "0.7", features = ["archive_le"] }
unixfs = { package = "unixfs-v1", version = "0.3" }
uuid = { version = "1.2", features = ["serde", "v4"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
rayon = "1.5"

[dev-dependencies]
criterion = "0.4"
rkyv = { version = "0.7", features = ["archive_le", "validation"] }

[[bench]]
name = "hash"
harness = false
