[package]
name = "ipi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "1.0", features = ["serde"] }
fixed = { version = "1.15", features = ["serde"] }
generic-array = { version = "0.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10" }
uuid = { version = "1.0", features = ["serde"] }
