[package]
name = "ipi-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ipi_std"
crate-type = ["cdylib"]

[dependencies]
ipi-core = { path = "../core" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
